--- a/index.html
+++ b/index.html
@@ -159,16 +159,16 @@
     </table>
 
     <!-- Riwayat Trading -->
-    <h3>Riwayat Trading</h3>
+    <h3>Riwayat Trading <button id="downloadHistory">Download CSV</button></h3>
     <table id="tradeHistory">
       <thead>
-        <tr><th>Pair</th><th>Lot</th><th>Posisi</th><th>Harga Entry</th><th>Harga Tutup</th><th>Pips</th><th>Profit (USDc)</th><th>Waktu Entry</th><th>Waktu Tutup</th></tr>
+        <tr><th>Pair</th><th>Lot</th><th>Posisi</th><th>Harga Entry</th><th>Harga Tutup</th><th>Pips</th><th>Profit (USDc)</th><th>Waktu Entry</th><th>Waktu Tutup</th><th>Alasan</th></tr>
       </thead>
       <tbody></tbody>
     </table>
 
     <!-- Rekap Harian -->
-    <h3>Rekap Trading Harian</h3>
+    <h3>Rekap Trading Harian <button id="downloadRekap">Download CSV</button></h3>
     <table id="dailySummaryTable">
       <thead>
         <tr><th>Tanggal</th><th>Saldo Awal</th><th>Saldo Akhir</th><th>Pertumbuhan (%)</th><th>Total Trade</th><th>Analisa</th></tr>
@@ -177,258 +177,6 @@
     </table>
   </div>
 </div>
-
-<script>
-// Data & Users
-const users = {
-  "4ND1": { username: "Andi", initialBalance: 100 },
-  "R1SKY": { username: "Kyy Official", initialBalance: 10 },
-  "VL": { username: "VICKY", initialBalance: 10 },
-  "DEMO": { username: "DEMO", initialBalance: 1000 }
-};
-let currentUser=null;
-let initialBalance, finalBalance, totalPips, totalTrades, winTrades, lossTrades, openTrades=[];
-
-// DOM elements
-const loginForm=document.getElementById("loginForm");
-const accessCodeInput=document.getElementById("accessCode");
-const dashboard=document.getElementById("dashboard");
-const usernameDisplay=document.getElementById("usernameDisplay");
-const initialBalanceDisplay=document.getElementById("initialBalanceDisplay");
-const finalBalanceDisplay=document.getElementById("finalBalanceDisplay");
-const totalPipsDisplay=document.getElementById("totalPipsDisplay");
-const totalTradesDisplay=document.getElementById("totalTradesDisplay");
-const winrateDisplay=document.getElementById("winrateDisplay");
-const analysisText=document.getElementById("analysisText");
-const openTradeForm=document.getElementById("openTradeForm");
-const openTradesBody=document.getElementById("openTradesBody");
-const tradeHistoryBody=document.querySelector("#tradeHistory tbody");
-const dailySummaryTableBody=document.querySelector("#dailySummaryTable tbody");
-
-// LocalStorage logic
-function saveUserData(){
-  if(!currentUser) return;
-  const data={
-    initialBalance, finalBalance, totalPips, totalTrades, winTrades, lossTrades,
-    openTrades,
-    tradeHistory: Array.from(tradeHistoryBody.children).map(tr=>{
-      const c=tr.children;
-      return {
-        pair:c[0].textContent, lot:parseFloat(c[1].textContent),
-        position:c[2].textContent, entryPrice:parseFloat(c[3].textContent),
-        closePrice:parseFloat(c[4].textContent), pips:parseFloat(c[5].textContent),
-        profit:parseFloat(c[6].textContent),
-        entryTime:c[7].textContent, closeTime:c[8].textContent
-      };
-    }),
-    dailySummary: loadDailySummary()
-  };
-  localStorage.setItem(`tradingData_${currentUser.username}`, JSON.stringify(data));
-}
-function loadUserData(){
-  if(!currentUser) return null;
-  const raw=localStorage.getItem(`tradingData_${currentUser.username}`);
-  return raw?JSON.parse(raw):null;
-}
-function loadDailySummary(){
-  if(!currentUser) return [];
-  const raw=localStorage.getItem(`dailySummary_${currentUser.username}`);
-  return raw?JSON.parse(raw):[];
-}
-function saveDailySummary(data){
-  if(!currentUser) return;
-  localStorage.setItem(`dailySummary_${currentUser.username}`, JSON.stringify(data));
-}
-
-// Utilities
-function clearTable(tbody){
-  while(tbody.firstChild) tbody.removeChild(tbody.firstChild);
-}
-function getTodayStr(){
-  const d=new Date(); return d.toISOString().slice(0,10);
-}
-function getYesterdayStr(){
-  const d=new Date(); d.setDate(d.getDate()-1);
-  return d.toISOString().slice(0,10);
-}
-function generateDailyAnalysis(totalTrade, growthPercent){
-  let r=[];
-  if(totalTrade>20) r.push("Over Trading");
-  if(growthPercent<0) r.push("Kerugian");
-  else if(growthPercent<1) r.push("Growth Lambat");
-  else if(growthPercent>5) r.push("Growth Bagus");
-  else r.push("Growth Stabil");
-  return r.join("; ");
-}
-function updateAnalysis(){
-  let analisa=[];
-  if(totalTrades>20) analisa.push("⚠️ Over Trading");
-  const growthPercent=((finalBalance-initialBalance)/initialBalance)*100;
-  if(growthPercent<0) analisa.push("📉 Kerugian hari ini");
-  else if(growthPercent<1) analisa.push("⚖️ Growth lambat (<1%)");
-  else if(growthPercent>5) analisa.push("🚀 Growth bagus (>5%)");
-  else analisa.push("📈 Growth stabil");
-  analysisText.textContent=analisa.join("; ");
-}
-function updateStats(){
-  initialBalanceDisplay.textContent=initialBalance.toFixed(2);
-  finalBalanceDisplay.textContent=finalBalance.toFixed(2);
-  totalPipsDisplay.textContent=totalPips.toFixed(2);
-  totalTradesDisplay.textContent=totalTrades;
-  const closed=winTrades+lossTrades;
-  const winrate=closed>0?(winTrades/closed)*100:0;
-  winrateDisplay.textContent=winrate.toFixed(1)+"%";
-  updateAnalysis();
-}
-
-// Rendering functions
-function addOpenTradeRow(trade){
-  const tr=document.createElement("tr");
-  tr.innerHTML=`
-    <td>${trade.pair}</td><td>${trade.lot.toFixed(2)}</td><td>${trade.position}</td>
-    <td>${trade.entryPrice.toFixed(4)}</td><td>${trade.reason}</td>
-    <td>${trade.time}</td><td><button class="close-btn">Close</button></td>`;
-  openTradesBody.appendChild(tr);
-  tr.querySelector(".close-btn").addEventListener("click",()=>closeTrade(tr));
-}
-function addTradeHistoryRow(t){
-  const tr=document.createElement("tr");
-  tr.innerHTML=`
-    <td>${t.pair}</td><td>${t.lot.toFixed(2)}</td><td>${t.position}</td>
-    <td>${t.entryPrice.toFixed(4)}</td>
-    <td>${t.closePrice.toFixed(4)}</td>
-    <td>${t.pips}</td><td>${t.profit.toFixed(2)}</td>
-    <td>${t.entryTime}</td><td>${t.closeTime}</td>`;
-  tradeHistoryBody.appendChild(tr);
-}
-function renderDailySummaryTable(arr){
-  clearTable(dailySummaryTableBody);
-  arr.forEach(d=>{
-    const tr=document.createElement("tr");
-    tr.innerHTML=`
-      <td>${d.date}</td><td>${d.saldoAwal.toFixed(2)}</td>
-      <td>${d.saldoAkhir.toFixed(2)}</td><td>${d.pertumbuhan.toFixed(2)}</td>
-      <td>${d.totalTrade}</td><td>${d.analisa}</td>`;
-    dailySummaryTableBody.appendChild(tr);
-  });
-}
-
-// Close trade handler
-function closeTrade(trElement){
-  const idx=Array.from(openTradesBody.children).indexOf(trElement);
-  if(idx<0) return;
-  const trade=openTrades[idx];
-  const cprompt=prompt(`Masukkan harga tutup untuk ${trade.pair} (${trade.position}):`);
-  const closePrice=parseFloat(cprompt);
-  if(isNaN(closePrice)) return alert("Harga tutup tidak valid.");
-  const pips=(trade.position==="BUY"?closePrice-trade.entryPrice:trade.entryPrice-closePrice)*10;
-  const profit=pips*trade.lot;
-  const closeTime=new Date().toLocaleString();
-
-  finalBalance+=profit;
-  totalPips+=pips;
-  totalTrades++;
-  profit>=0?winTrades++:lossTrades++;
-
-  openTrades.splice(idx,1);
-  openTradesBody.removeChild(trElement);
-  addTradeHistoryRow({
-    pair:trade.pair, lot:trade.lot, position:trade.position,
-    entryPrice:trade.entryPrice, closePrice, pips:pips.toFixed(1),
-    profit, entryTime:trade.time, closeTime
-  });
-
-  updateStats();
-  saveUserData();
-}
-
-// Daily check and summary
-function dailyCheckAndSave(){
-  const today=getTodayStr();
-  const ds=loadDailySummary();
-  if(!ds.find(d=>d.date===today)){
-    const yesterday=getYesterdayStr();
-    if(!ds.find(d=>d.date===yesterday)&& totalTrades>0){
-      const growthPercent=((finalBalance-initialBalance)/initialBalance)*100;
-      const anal=generateDailyAnalysis(totalTrades, growthPercent);
-      ds.push({ date:yesterday, saldoAwal:initialBalance, saldoAkhir:finalBalance, pertumbuhan:growthPercent, totalTrade:totalTrades, analisa:anal });
-      saveDailySummary(ds);
-    }
-    resetTradingDay(today,false);
-  }
-  renderDailySummaryTable(ds);
-}
-
-// Reset trading day
-function resetTradingDay(todayStr,loadExisting){
-  if(loadExisting){
-    const data=loadUserData();
-    if(data){
-      initialBalance=data.initialBalance||currentUser.initialBalance;
-      finalBalance=data.finalBalance||initialBalance;
-      totalPips=data.totalPips||0;
-      totalTrades=data.totalTrades||0;
-      winTrades=data.winTrades||0;
-      lossTrades=data.lossTrades||0;
-      openTrades=data.openTrades||[];
-      clearTable(openTradesBody);
-      openTrades.forEach(addOpenTradeRow);
-      clearTable(tradeHistoryBody);
-      (data.tradeHistory||[]).forEach(addTradeHistoryRow);
-      updateStats();
-      return;
-    }
-  }
-  initialBalance=currentUser.initialBalance;
-  finalBalance=initialBalance;
-  totalPips=0; totalTrades=0; winTrades=0; lossTrades=0; openTrades=[];
-  clearTable(openTradesBody);
-  clearTable(tradeHistoryBody);
-  updateStats();
-}
-
-// Event listeners
-loginForm.addEventListener("submit",e=>{
-  e.preventDefault();
-  const code=accessCodeInput.value.trim().toUpperCase();
-  if(users[code]){
-    currentUser=users[code];
-    usernameDisplay.textContent=currentUser.username;
-    resetTradingDay(getTodayStr(),true);
-    dashboard.style.display="block";
-    loginForm.style.display="none";
-    dailyCheckAndSave();
-  } else {
-    alert("Kode akses tidak valid!");
-    accessCodeInput.value=""; accessCodeInput.focus();
-  }
-});
-
-openTradeForm.addEventListener("submit", e => {
-  e.preventDefault();
-  const pair = document.getElementById("pair").value.trim().toUpperCase();
-  const lot = parseFloat(document.getElementById("lot").value);
-  const position = document.getElementById("position").value;
-
-  const entryPriceRaw = document.getElementById("entryPrice").value.trim();
-  
-  // Validasi 2 angka di belakang koma
-  if (!/^\d+(\.\d{1,2})?$/.test(entryPriceRaw)) {
-    alert("Harga Entry harus maksimal 2 angka di belakang koma.");
-    return;
-  }
-
-  const entryPrice = parseFloat(entryPriceRaw);
-  const reason = document.getElementById("reason").value.trim();
-  const entryTime = new Date().toLocaleString();
-
-  const newTrade = { pair, lot, position, entryPrice, reason, time: entryTime };
-  openTrades.push(newTrade);
-  addOpenTradeRow(newTrade);
-  saveUserData();
-  openTradeForm.reset();
-});
-
-</script>
+<script src="app.js"></script>
 </body>
 </html>
